package Logica;

import java.util.Base64;

/**
 * La clase Seguridad se encarga de manejar la encriptación de contraseñas y la validación de tokens.
 * Esta clase contiene métodos para encriptar contraseñas de los usuarios y verificar tokens de seguridad
 * para garantizar la integridad y seguridad de las operaciones.
 * 
 * @author Dimerson
 */
public class Seguridad {
    private String contraseñaEncriptada; // Contraseña encriptada del usuario

    /**
     * Encripta la contraseña proporcionada utilizando un algoritmo de encriptación.
     * 
     * @param password La contraseña que se va a encriptar.
     * @return La contraseña encriptada en formato Base64.
     */
    public String encriptarContraseña(String password) {
        // Utilizamos Base64 como ejemplo de encriptación (en un caso real se debe usar un algoritmo robusto)
        return Base64.getEncoder().encodeToString(password.getBytes());
    }

    /**
     * Valida un token de seguridad. Este método es responsable de verificar si el token proporcionado es
     * válido para autenticar las operaciones del usuario.
     * 
     * @param token El token de seguridad que se quiere validar.
     * @return true si el token es válido, de lo contrario, false.
     */
    public boolean validarToken(String token) {
        // Implementar lógica para validar el token. Este es un ejemplo simple, pero en un sistema real se debería
        // consultar una base de datos o utilizar un sistema de autenticación más complejo.
        return token != null && token.length() > 10; // Simulación de validación
    }
}
